store command line options in a file. This means a more flexible RSpec experience with Rails, 
Rake and editor plugins like TextMate.

It also introduces a new approach to handling should expectations. See RELEASE-PLAN for more info.

It also sports myriad new features, bug fixes, patches and general goodness:

* RSpec on Rails' spec_helper.rb will only force RAILS_ENV to test if it was not specified on the command line.
* Fixed [#5485] proc#should_raise and proc#should_not_raise output
* Added [#8484] should_receive with blocks
* Applied [#8218] heckle_runner.rb doesn't work with heckle >= 1.2.0 (Patch from Michal Kwiatkowski)
* Fixed [#8240] Cryptic error message when no controller_name
* Applied [#7461] [PATCH] Contexts don't call Module::included when they include a module
* Removed unintended block of test/unit assertions in rspec_on_rails - they should all, in theory, now be accessible
* Added mock_model method to RSpec on Rails, which stubs common methods. Based on http://metaclass.org/2006/12/22/making-a-mockery-of-activerecord
* Fixed [#8165] Partial Mock Errors when respond_to? is true but the method is not in the object
* Fixed [#7611] Partial Mocks override Subclass methods
* Fixed [#8302] Strange side effect when mocking a class method
* Applied [#8316] to_param should return a stringified key in resource generator's controller spec (Patch from Chris Anderson)
* Applied [#8216] shortcut for creating object stub
* Applied [#8008] Correct generated specs for view when calling resource generator (Patch from Jonathan Tron)
* Fixed [#7754] Command-R fails to run spec in TextMate (added instruction from Luke Redpath to the website)
* Fixed [#7826] RSpect.tmbundle web page out of date.
* RSpec on Rails specs are now running against RoR 1.2.1 and 1.2.2
* rspec_resource now generates specs for views (TODO: make them use the new assert_select, when it's documented)
* In a Rails app, RSpec core is only loaded when RAILS_ENV==test (init.rb)